--- a/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
@@ -1,21 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
    <children>
-      <Label fx:id="mainTitle" layoutX="146.0" layoutY="141.0" text="AerolinesCanary7">
+      <ImageView fitHeight="590.0" fitWidth="874.0" layoutX="-11.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Imagenes/avion2.jpg" />
+         </image>
+      </ImageView>
+      <Pane layoutX="33.0" layoutY="245.0" opacity="0.25" prefHeight="86.0" prefWidth="797.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
+      <Label layoutX="56.0" layoutY="254.0" text="AEROLINES CANARY 7 ISLANDS">
          <font>
-            <Font name="Berlin Sans FB Demi Bold" size="40.0" />
+            <Font name="Monospaced Bold" size="48.0" />
          </font>
+         <effect>
+            <Shadow />
+         </effect>
       </Label>
-      <Button layoutX="222.0" layoutY="269.0" mnemonicParsing="false" onMouseClicked="#loginClick" text="Iniciar Sesion">
+      <Label fx:id="mainTitle" layoutX="54.0" layoutY="253.0" text="AEROLINES CANARY 7 ISLANDS">
          <font>
-            <Font name="Berlin Sans FB" size="22.0" />
+            <Font name="Monospaced Bold" size="48.0" />
          </font>
-      </Button>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5263158082962036" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006711409395973154">
+                     <color>
+                        <Color red="0.5263158082962036" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.9932885906040269">
+                     <color>
+                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <Label layoutX="681.0" layoutY="17.0" text="Iniciar Sesión">
+         <font>
+            <Font name="Monospaced Bold" size="20.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5263158082962036" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006711409395973154">
+                     <color>
+                        <Color red="0.5263158082962036" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.9932885906040269">
+                     <color>
+                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <ImageView fitHeight="41.0" fitWidth="79.0" layoutX="630.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Iconos/avion-de-papel.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="616.0" layoutY="6.0" onMouseClicked="#loginClick" prefHeight="41.0" prefWidth="246.0" />
    </children>
 </AnchorPane>
