--- a/src/main/resources/com/example/aerolineascanary7islands/login-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/login-view.fxml
@@ -5,10 +5,12 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.LoginController">
    <children>
+      <Pane layoutX="114.0" layoutY="28.0" opacity="0.47" prefHeight="345.0" prefWidth="375.0" style="-fx-background-color: grey;" />
       <Button layoutX="271.0" layoutY="269.0" mnemonicParsing="false" onMouseClicked="#send" text="Enviar">
          <font>
             <Font name="Berlin Sans FB" size="16.0" />
