--- a/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
@@ -5,10 +5,12 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.RegisterController">
    <children>
+      <Pane layoutX="70.0" layoutY="27.0" opacity="0.16" prefHeight="346.0" prefWidth="457.0" style="-fx-background-color: grey;" />
       <Label fx:id="registerTitle" layoutX="201.0" layoutY="48.0" text="Registrarse">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="40.0" />
