--- a/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,14 +19,6 @@
          </image>
       </ImageView>
       <Pane layoutX="33.0" layoutY="245.0" opacity="0.25" prefHeight="86.0" prefWidth="797.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
-      <Label layoutX="73.0" layoutY="244.0" text="AEROLINES CANARY 7 ISLANDS">
-         <font>
-            <Font name="Impact" size="64.0" />
-         </font>
-         <effect>
-            <Shadow />
-         </effect>
-      </Label>
       <Label fx:id="mainTitle" layoutX="71.0" layoutY="243.0" text="AEROLINES CANARY 7 ISLANDS">
          <font>
             <Font name="Impact" size="64.0" />
@@ -57,38 +49,20 @@
                </stops>
             </LinearGradient>
          </textFill>
+         <effect>
+            <Bloom />
+         </effect>
       </Label>
-      <Label layoutX="694.0" layoutY="22.0" prefHeight="41.0" prefWidth="137.0" text="Iniciar Sesión">
+      <Label layoutX="684.0" layoutY="534.0" prefHeight="41.0" prefWidth="137.0" text="Iniciar Sesión" textFill="#220000">
          <font>
             <Font name="Calibri" size="24.0" />
          </font>
-         <textFill>
-            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.5263158082962036" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.006711409395973154">
-                     <color>
-                        <Color red="0.5263158082962036" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.9932885906040269">
-                     <color>
-                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </textFill>
       </Label>
-      <Pane layoutX="675.0" layoutY="22.0" onMouseClicked="#loginClick" prefHeight="41.0" prefWidth="163.0" />
+      <Pane layoutX="666.0" layoutY="534.0" onMouseClicked="#loginClick" prefHeight="41.0" prefWidth="196.0" />
+      <ImageView fitHeight="27.0" fitWidth="40.0" layoutX="818.0" layoutY="543.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Iconos/avance-rapido.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
