--- a/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,15 +10,15 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="714.0" prefWidth="1002.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
    <children>
-      <ImageView fitHeight="590.0" fitWidth="874.0" layoutX="-11.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="764.0" fitWidth="1027.0" layoutX="-14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Imagenes/avion2.jpg" />
+            <Image url="@../../../Imagenes/terminal.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="33.0" layoutY="245.0" opacity="0.25" prefHeight="86.0" prefWidth="797.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
-      <Label fx:id="mainTitle" layoutX="71.0" layoutY="243.0" text="AEROLINES CANARY 7 ISLANDS">
+      <Pane layoutX="107.0" layoutY="340.0" opacity="0.25" prefHeight="86.0" prefWidth="797.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
+      <Label fx:id="mainTitle" layoutX="145.0" layoutY="338.0" text="AEROLINES CANARY 7 ISLANDS">
          <font>
             <Font name="Impact" size="64.0" />
          </font>
@@ -28,41 +27,55 @@
                <stops>
                   <Stop>
                      <color>
-                        <Color red="0.5263158082962036" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.006711409395973154">
-                     <color>
-                        <Color red="0.5263158082962036" />
+                        <Color red="0.28947368264198303" />
                      </color>
                   </Stop>
                   <Stop offset="0.9932885906040269">
                      <color>
-                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                        <Color red="0.28421053290367126" blue="0.9473684430122375" />
                      </color>
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="0.20623809099197388" blue="0.6100000143051147" />
+                        <Color red="0.28421053290367126" blue="0.9473684430122375" />
                      </color>
                   </Stop>
                </stops>
             </LinearGradient>
          </textFill>
-         <effect>
-            <Bloom />
-         </effect>
       </Label>
-      <Label layoutX="684.0" layoutY="534.0" prefHeight="41.0" prefWidth="137.0" text="Iniciar Sesión" textFill="#220000">
+      <Pane layoutX="799.0" layoutY="14.0" opacity="0.25" prefHeight="41.0" prefWidth="195.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
+      <Label layoutX="812.0" layoutY="13.0" prefHeight="41.0" prefWidth="157.0" text="Iniciar Sesión">
          <font>
-            <Font name="Calibri" size="24.0" />
+            <Font name="Berlin Sans FB" size="24.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.28947368264198303" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.9932885906040269">
+                     <color>
+                        <Color red="0.28421053290367126" blue="0.9473684430122375" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.28421053290367126" blue="0.9473684430122375" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <Pane layoutX="666.0" layoutY="534.0" onMouseClicked="#loginClick" prefHeight="41.0" prefWidth="196.0" />
-      <ImageView fitHeight="27.0" fitWidth="40.0" layoutX="818.0" layoutY="543.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="41.0" fitWidth="38.0" layoutX="955.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../Iconos/avance-rapido.png" />
+            <Image url="@../../../Iconos/datos-del-usuario.png" />
          </image>
       </ImageView>
+      <Pane layoutX="799.0" layoutY="14.0" onMouseClicked="#loginClick" prefHeight="41.0" prefWidth="195.0" />
    </children>
 </AnchorPane>
