--- a/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/main-view.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.MainController">
    <children>
       <ImageView fitHeight="764.0" fitWidth="1027.0" layoutX="-14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -47,7 +43,7 @@
       <Pane layoutX="799.0" layoutY="14.0" opacity="0.25" prefHeight="41.0" prefWidth="195.0" style="-fx-background-color: WHITE; -fx-border-color: GREY;" />
       <Label layoutX="812.0" layoutY="13.0" prefHeight="41.0" prefWidth="157.0" text="Iniciar Sesión">
          <font>
-            <Font name="Berlin Sans FB" size="24.0" />
+            <Font name="Calibri" size="24.0" />
          </font>
          <textFill>
             <LinearGradient endX="1.0" endY="1.0" startX="1.0">
