--- a/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
@@ -1,56 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="646.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.RegisterController">
+<AnchorPane prefHeight="707.0" prefWidth="1076.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.RegisterController">
    <children>
-      <ImageView fitHeight="867.0" fitWidth="1076.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="782.0" fitWidth="1076.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Imagenes/EsperaEnTerminal.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="364.0" layoutY="263.0" opacity="0.25" prefHeight="217.0" prefWidth="340.0" style="-fx-background-color: black;" />
-      <Label fx:id="registerTitle" layoutX="437.0" layoutY="61.0" text="Registrarse">
+      <Pane layoutX="154.0" layoutY="190.0" opacity="0.6" prefHeight="379.0" prefWidth="792.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label fx:id="registerTitle11" layoutX="381.0" layoutY="61.0" text="Registrarse">
          <font>
-            <Font name="Impact" size="40.0" />
+            <Font name="Impact" size="72.0" />
+         </font>
+         <effect>
+            <Shadow />
+         </effect>
+      </Label>
+      <Label fx:id="registerTitle1" layoutX="376.0" layoutY="60.0" text="Registrarse">
+         <font>
+            <Font name="Impact" size="72.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.6030701994895935" green="0.6734283566474915" blue="0.9868420958518982" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <Label layoutX="319.0" layoutY="261.0" text="Nombre">
+         <font>
+            <Font name="Calibri" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="419.0" layoutY="297.0" text="Nombre">
+      <TextField fx:id="textFieldNombre" layoutX="490.0" layoutY="253.0" prefHeight="46.0" prefWidth="336.0" promptText="Inserte su nombre" style="-fx-background-color: lightGrey; -fx-border-color: grey; -fx-text-fill: black;">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
+            <Font name="Calibri" size="24.0" />
+         </font></TextField>
+      <Label layoutX="319.0" layoutY="333.0" text="Contraseña">
+         <font>
+            <Font name="Calibri" size="24.0" />
          </font></Label>
-      <TextField fx:id="textFieldNombre" layoutX="505.0" layoutY="294.0" />
-      <Label layoutX="412.0" layoutY="336.0" text="Contraseña">
+      <Label layoutX="319.0" layoutY="401.0" text="Teléfono">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
+            <Font name="Calibri" size="24.0" />
          </font></Label>
-      <Label layoutX="418.0" layoutY="374.0" text="Telefono">
+      <TextField fx:id="textFieldTelefono" layoutX="490.0" layoutY="393.0" prefHeight="46.0" prefWidth="336.0" promptText="Inserte un número de teléfono" style="-fx-background-color: lightGrey; -fx-border-color: grey;">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
+            <Font name="Calibri" size="24.0" />
+         </font></TextField>
+      <Label layoutX="319.0" layoutY="466.0" text="Mail">
+         <font>
+            <Font name="Calibri" size="24.0" />
          </font></Label>
-      <TextField fx:id="textFieldTelefono" layoutX="505.0" layoutY="371.0" />
-      <Label layoutX="432.0" layoutY="410.0" text="Mail">
+      <TextField fx:id="textFieldMail" layoutX="490.0" layoutY="458.0" prefHeight="46.0" prefWidth="336.0" promptText="Inserte su email" style="-fx-background-color: lightGrey; -fx-border-color: grey;">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
-         </font></Label>
-      <TextField fx:id="textFieldMail" layoutX="505.0" layoutY="407.0" />
-      <Button layoutX="639.0" layoutY="480.0" mnemonicParsing="false" onMouseClicked="#send" text="Enviar">
+            <Font name="Calibri" size="24.0" />
+         </font></TextField>
+      <PasswordField fx:id="textFieldContraseña" layoutX="490.0" layoutY="325.0" prefHeight="46.0" prefWidth="336.0" promptText="Inserte una contraseña" style="-fx-background-color: lightGrey; -fx-border-color: grey;">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
-         </font></Button>
-      <Button layoutX="367.0" layoutY="480.0" mnemonicParsing="false" onMouseClicked="#exitClick" text="Volver atras">
+            <Font name="Calibri" size="24.0" />
+         </font></PasswordField>
+      <Pane layoutX="35.0" layoutY="681.0" onMouseClicked="#exitClick" opacity="0.6" prefHeight="59.0" prefWidth="239.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="115.0" layoutY="693.0" onMouseClicked="#exitClick" text="Volver Atrás">
          <font>
-            <Font name="Berlin Sans FB" size="16.0" />
+            <Font name="Calibri" size="30.0" />
          </font>
-      </Button>
-      <PasswordField fx:id="textFieldContraseña" layoutX="506.0" layoutY="333.0" />
+      </Label>
+      <Pane layoutX="853.0" layoutY="681.0" onMouseClicked="#send" opacity="0.6" prefHeight="59.0" prefWidth="187.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="872.0" layoutY="693.0" onMouseClicked="#send" text="Enviar">
+         <font>
+            <Font name="Calibri" size="30.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="59.0" fitWidth="61.0" layoutX="969.0" layoutY="681.0" onMouseClicked="#send" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Iconos/flechaRoja.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="59.0" fitWidth="61.0" layoutX="43.0" layoutY="681.0" onMouseClicked="#exitClick" pickOnBounds="true" preserveRatio="true" rotate="-180.0">
+         <image>
+            <Image url="@../../../Iconos/flechaRoja.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
