--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.ticketsController">
+<AnchorPane prefHeight="422.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.ticketsController">
    <children>
-      <ImageView fitHeight="58.0" fitWidth="57.0" layoutX="14.0" layoutY="14.0">
+      <Label layoutX="252.0" layoutY="380.0" text="Reservar vuelo">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <StackPane fx:id="carrousel" layoutY="58.0" prefHeight="305.0" prefWidth="576.0">
+         <children>
+            <ImageView fx:id="imageView2" fitHeight="305.0" fitWidth="613.0">
+               <image>
+                  <Image url="@../../../Imagenes/Tenerife.jpg" />
+               </image>
+            </ImageView>
+            <Label fx:id="tenerifeLabel" text="Tenerife" textFill="#191b14">
+               <font>
+                  <Font size="65.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="imageView1" fitHeight="304.0" fitWidth="619.0">
+               <image>
+                  <Image url="@../../../Imagenes/GranCanaria.jpg" />
+               </image>
+            </ImageView>
+            <Label fx:id="granCanariaLabel" text="Gran Canaria" textFill="#191b14">
+               <font>
+                  <Font size="65.0" />
+               </font>
+            </Label>
+         </children></StackPane>
+      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="14.0" layoutY="8.0">
          <image>
             <Image url="@../../../Imagenes/usuario.png" />
          </image>
       </ImageView>
-      <StackPane fx:id="carrousel" layoutX="200.0" layoutY="125.0" prefHeight="150.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
