creadoMétodo para comprobar si un usuario es administrador y añadida vista principal vuelos

--- a/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/register-view.fxml
@@ -29,7 +29,7 @@
             <Shadow />
          </effect>
       </Label>
-      <Label fx:id="labeltitle" layoutX="376.0" layoutY="60.0" text="Registrarse">
+      <Label fx:id="registerTitle" layoutX="376.0" layoutY="60.0" text="Registrarse">
          <font>
             <Font name="Impact" size="72.0" />
          </font>
