--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="422.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.ticketsController">
+<AnchorPane prefHeight="422.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsController">
    <children>
       <Label layoutX="252.0" layoutY="380.0" text="Reservar vuelo">
          <font>
@@ -37,10 +37,15 @@
                </font>
             </Label>
          </children></StackPane>
-      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="14.0" layoutY="8.0">
+      <ImageView fitHeight="45.0" fitWidth="43.0" layoutX="14.0" layoutY="8.0" onMouseClicked="#perfilClick">
          <image>
             <Image url="@../../../Imagenes/usuario.png" />
          </image>
       </ImageView>
+      <Label fx:id="labelTitle" layoutX="257.0" layoutY="-2.0" prefHeight="54.0" prefWidth="106.0" text="Viajes">
+         <font>
+            <Font name="Calibri" size="40.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
